# TZ

./: .env.local  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
src/: app_config.py  main.py
src/api/routers/: all.py
src/api/routers/books/: router.py
src/controllers/books/: controller.py
src/infra/: transaction_manager.py
src/infra/http/: exception_handlers.py
src/infra/postgres/: pg.py  uow.py
src/infra/postgres/alembic/: env.py
src/infra/postgres/alembic/versions/: 2026_02_25_0923-27f734305e3d_authors.py  2026_04_13_1148-b0b226b81dbd_books.py
src/infra/postgres/models/: __init__.py  author.py  base.py  book.py  book_author.py
src/infra/postgres/storage/: author.py  base_storage.py  book.py
src/modules/base/: controller.py  errors.py  exceptions.py
src/modules/books/: controller.py  controllers.py  di.py  errors.py  exceptions.py  router.py  schemas.py  services.py
src/schemas/authors/: create.py  read.py
src/schemas/books/: base.py  create.py  read.py
tests/: conftest.py  test_books.py
